--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,5 @@
 // base
+@import './base/colors';
 @import './base/fonts';
 @import './base/reset';
-@import './base/colors';
+@import './base/vars';
