chosen drag lib, appear transition

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 // base
 @import './base/colors';
+@import './base/common';
 @import './base/fonts';
 @import './base/reset';
 @import './base/vars';
