--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -1,6 +1,6 @@
 $white: #FFFFFF;
 $black: #000;
-$dark-blue: #4754ba;
+$dark-blue: #5997f7;
 $blue: #93c2ff;
 $light-blue: #e3f0ff;
 $gray: #e7ebf5;
