time error, animation delay

--- a/src/assets/scss/base/_common.scss
+++ b/src/assets/scss/base/_common.scss
@@ -20,6 +20,15 @@
 
   text-align: center;
 
+  &--error {
+    border: 1px solid $red;
+
+    &:after {
+      content: 'Error';
+      color: $red;
+    }
+  }
+
   &__delete {
     position: absolute;
     top: 0;
